<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Menu -->
    <string name="settings">Settings</string>
    <string name="about">About</string>


    <string name="appNameText">My Places</string>
    <string name="settingsText">Menu</string>
    <string name="showPlacesText">SHOW PLACES</string>
    <string name="favouritesText">FAVOURITES</string>
    <string name="aboutTitle">ABOUT</string>
    <string name="exitText">EXIT</string>
    <string name="enterPlaceHintText">Have a new place?</string>
    <string name="addressText">Where?</string>
    <string name="phoneText">Phone?</string>
    <string name="urlText">Web?</string>
    <string name="notesText">What do you think about this place?</string>
    <string name="ratingBarText">Rate it?</string>
    <string name="aboutText">Demo app developed in an Android learning course by <a href="http://www.androidcurso.com/index.php">UPV</a> (Spain)</string>

    <!-- Read about spinners here https://developer.android.com/guide/topics/ui/controls/spinner -->
    <string-array name="spinnerArray">
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
    </string-array>
</resources>
