<?xml version="1.0" encoding="utf-8"?>

<!--
**********************************************************************************************************
******************************* VERY IMPORTANT! **********************************************************
Always add attribute android:fillViewport="true" when placing a ConstraintLayout inside a NestedScrollView
**********************************************************************************************************
-->

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/showPlacesButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/showPlacesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/favouritesButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/favouritesText"
            app:layout_constraintEnd_toEndOf="@+id/showPlacesButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/showPlacesButton"
            app:layout_constraintTop_toBottomOf="@+id/showPlacesButton" />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/aboutText"
            app:layout_constraintEnd_toEndOf="@+id/favouritesButton"
            app:layout_constraintStart_toStartOf="@+id/favouritesButton"
            app:layout_constraintTop_toBottomOf="@+id/favouritesButton" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/exitText"
            app:layout_constraintEnd_toEndOf="@+id/aboutButton"
            app:layout_constraintStart_toStartOf="@+id/aboutButton"
            app:layout_constraintTop_toBottomOf="@+id/aboutButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>